# dax-auth

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TESTING.md  deny.toml  install.sh  justfile  requirements.txt
.github/workflows/: ci.yml
.opencode/skills/dax-auth-pipeline/: SKILL.md
.opencode/skills/pam-module/: SKILL.md
.opencode/skills/rust-low-level/: SKILL.md
config/: config.toml  config.yaml
crates/dax-auth-camera/: Cargo.toml
crates/dax-auth-camera/src/: capture.rs  device.rs  error.rs  frame.rs  lib.rs
crates/dax-auth-cli/: Cargo.toml
crates/dax-auth-cli/src/: main.rs
crates/dax-auth-cli/tests/: store_integration.rs
crates/dax-auth-core/: Cargo.toml
crates/dax-auth-core/src/: config.rs  detection.rs  embedding.rs  error.rs  lib.rs  liveness.rs  models.rs  pipeline.rs  store.rs
crates/dax-auth-core/tests/: pipeline_mock.rs
crates/dax-auth-daemon/: Cargo.toml
crates/dax-auth-daemon/src/: config.rs  main.rs  server.rs  session.rs  signals.rs
crates/dax-auth-daemon/tests/: daemon_smoke.rs
crates/dax-auth-pam/: Cargo.toml
crates/dax-auth-pam/src/: lib.rs
crates/dax-auth-proto/: Cargo.toml
crates/dax-auth-proto/src/: codec.rs  lib.rs  request.rs  response.rs  types.rs
crates/dax-auth-proto/tests/: codec_roundtrip.rs
crates/dax-capture/: Cargo.toml
crates/dax-capture/src/: camera.rs  enumerator.rs  error.rs  ir.rs  lib.rs
crates/dax-cli/: Cargo.toml
crates/dax-cli/src/: main.rs  resolve.rs
crates/dax-cli/src/commands/: compare.rs  detect.rs  devices.rs  embed.rs  enroll.rs  liveness.rs  mod.rs  snap.rs  snap_ir.rs  vault.rs  verify.rs
crates/dax-core/: Cargo.toml
crates/dax-core/src/: frame.rs  lib.rs
crates/dax-detect/: Cargo.toml
crates/dax-detect/src/: decode.rs  detector.rs  error.rs  lib.rs  nms.rs  preprocess.rs  types.rs
crates/dax-embed/: Cargo.toml
crates/dax-embed/src/: align.rs  embedder.rs  embedding.rs  error.rs  lib.rs  warp.rs
crates/dax-liveness/: Cargo.toml
crates/dax-liveness/src/: checker.rs  crop.rs  error.rs  lib.rs
crates/dax-pam/: Cargo.toml
crates/dax-pam/src/: lib.rs
crates/dax-runtime/: Cargo.toml
crates/dax-runtime/src/: config.rs  error.rs  lib.rs  verify.rs
crates/dax-store/: Cargo.toml
crates/dax-store/src/: crypto.rs  error.rs  lib.rs  vault.rs
models/: README.md
openspec/: config.yaml
openspec/changes/phase1-camera-v4l2/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/phase2-pam-cli/: design.md  proposal.md  spec.md  tasks.md
packaging/: PKGBUILD  dax-auth.spec  dax-authd.service  pam-dax-auth.conf
packaging/debian/: control  postinst  postrm
scripts/: debug_pipeline.sh  download_models.sh  fetch-models.sh  install.sh  pamtest.sh  setup-runtime-dir.sh
src/: daxauth  face_recognition_pam.py  face_recognition_system.py
src/cli/: __init__.py  add.py  clear.py  verify.py
src/gui/: gui.py
src/pam/: Makefile  pam_face_auth.c
src/utils/: face_operations.py  file_operations.py  load_config.py  security.py
