[package]
name = "dax-auth-cli"
description = "CLI tool: face enrollment, user management, daemon control, diagnostics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "dax-auth"
path = "src/main.rs"

[dependencies]
dax-auth-core   = { path = "../dax-auth-core" }
dax-auth-camera = { path = "../dax-auth-camera" }
dax-auth-proto  = { path = "../dax-auth-proto" }

clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Crypto (for reading/writing face store)
chacha20poly1305 = { workspace = true }
zeroize = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
tempfile = "3"
