[package]
name = "dax-capture"
description = "Camera enumeration and frame capture for dax-auth."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
dax-core.workspace = true
nokhwa.workspace = true
thiserror.workspace = true
tracing.workspace = true
