[package]
name = "dax-detect"
description = "Face detection (SCRFD) for dax-auth."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
dax-capture.workspace = true
image.workspace = true
ndarray.workspace = true
ort.workspace = true
thiserror.workspace = true
tracing.workspace = true
