[package]
name = "dax-store"
description = "Encrypted on-disk vault for face templates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
argon2.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true
